<resources>
    <string name="app_name">Auugment</string>

    <string name="button_ar">AR</string>

    <string name="button_foo_add">Add Foo</string>
    <string name="button_foo_dec">Remove Foo</string>
    <string name="count_foo">0</string>
    <string name="name_foo">Foo count:</string>

    <string name="button_bar_add">Add Bar</string>
    <string name="button_bar_dec">Remove Bar</string>
    <string name="count_bar">0</string>
    <string name="name_bar">Bar count:</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_map">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
