<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button5"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:onClick="decreaseBar"
        android:text="@string/button_bar_dec"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:onClick="increaseFoo"
        android:text="@string/button_foo_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchAR" />

    <Button
        android:id="@+id/launchAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"

        android:layout_marginTop="32dp"
        android:onClick="activityAR"
        android:text="@string/button_ar"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logotextmain" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:onClick="increaseBar"
        android:text="@string/button_bar_add"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="decreaseFoo"
        android:text="@string/button_foo_dec"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <TextView
        android:id="@+id/logotextmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="178dp"
        android:fontFamily="@font/rez"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addtest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="ADD Test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/removetest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="removetest"
        app:layout_constraintBaseline_toBaselineOf="@+id/addtest"
        app:layout_constraintStart_toEndOf="@+id/addtest" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/removetest"
        app:layout_constraintStart_toEndOf="@+id/removetest" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="activityMap"
        android:text="@string/button_map"
        app:layout_constraintBaseline_toBaselineOf="@+id/launchAR"
        app:layout_constraintStart_toEndOf="@+id/launchAR" />

</androidx.constraintlayout.widget.ConstraintLayout>